(Format: Year/Month/Day)
Changes for 0.9.6:
*03/09/24:
  * Fix updates to mwm_hints, and make configure request
    move and resize atomic (Simon)
    - fixes mplayer fullscreen window being moveable
    - fixes focus loss when toggling mplayer fullscreen
    FbWinFrame.hh/cc Window.hh/cc FbAtoms.hh/cc WinClient.cc
  * Fixed the "aterm"-bug  (Henrik)
    Window.cc
*03/09/23:
  * Add support for _NET_WM_STATE_FULLSCREEN (Simon)
    - fixes mozilla/firebird fullscreen
    Ewmh.hh/cc Window.hh/cc
*03/09/22:
  * Fix invisible minimize button for non-pixmap themes (Simon)
    WinButton.cc
*03/09/21:
  * Fix disappearing close button (Simon)
    WinClient.hh/cc
*03/09/20:
  * Add nls/pl_PL (Thanks Offtza).
  * Add nls/translators.txt saying that offtza contributed the pl_PL.
  * Fixed WorkspaceCmd.cc ArrangeWindows for greater odd numbers (5,7,..).
*03/09/19:
  * fbsetbg update (Thanks Han)
    - fixes fbsetbg -l after a changing the wallpapersetter.
    - fixes xli debug message
    - cleanups
    - adds feh (thanks teemu)
*03/09/16:
   * Apply gravity when changing decorations (Simon)
     - also fix gravity when decorations not present
     Window.cc FbWinFrame.cc
*03/09/15:
   * Fixed bug in IconbarTool mode = NONE (Henrik)
     IconbarTool.cc
*03/09/14:
   * Fixed minor bug in stick pressed button (Henrik)
     WinButton.cc
   * Focus fixes (Simon)
     Hopefully fixes mysterious instances of focus not being set right.
     Window.cc fluxbox.cc
   * More optimization to reduce flicker in titlebar
     Screen.cc, FbWinFrame.cc/hh, TextButton.hh/cc, FbWindow.hh/cc
*03/09/13:
   * Fixed minor compilation problem for Solaris (Thanks NivenHuH)
     Resource.hh
   * Added new theme items (Henrik)
     * menu.borderWidth
     * menu.borderColor
     * menu.bevelWidth
     * window.handleWidth
     * window.bevelWidth
     MenuTheme.cc, FbWinFrameTheme.cc/hh, RootTheme.hh/cc, 
     Window.cc, Screen.cc
   * Optimized rendering for windows (Henrik)
     Reduced flicker